# Retapp

mobile/: .prettierrc.json  LICENSE  README.md  app.json  eas.json  package-lock.json  package.json  types.ts
mobile/app/: _layout.tsx  index.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx
mobile/app/api/: session+api.ts
mobile/assets/: categories.tsx  products.ts
mobile/components/: AnimatedMeshGradient.tsx  SettingsMenu.tsx
mobile/components/ui/: Tingting.tsx
mobile/ios/: Podfile
mobile/ios/mobile/: Info.plist
mobile/ios/mobile.xcodeproj/: project.pbxproj
mobile/plugins/: withWebRTCAudioConfig.js
mobile/src/app/: _layout.tsx  auth.tsx
mobile/src/app/(shop)/: _layout.tsx  index.tsx
mobile/src/app/(shop)/orders/: _layout.tsx  index.tsx
mobile/src/app/categories/: [slug].tsx  _layout.tsx
mobile/src/app/product/: _layout.tsx  index.tsx
mobile/src/components/: list-header.tsx  product-list-item.tsx
mobile/src/store/: cart-store.ts
mobile/types/: database.types.ts
server/: .gitignore  README.md  app.py  pyproject.toml
